--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -19,3 +19,12 @@
 .dropdown:hover .dropdown-menu {
   display: block;
 }
+
+.home__button {
+  height: 5.2vh;
+  width: 6.5vw;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 0;
+  padding-top: 0;
+}
