--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,8 @@
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" routerLink="/home"><span class="fa fa-home"></span>Home</a>
+      <button class="btn btn-success home__button" type="button" (click)="redirectHome()">Home <mat-icon>home</mat-icon></button>
+      <!--<a class="nav-link" routerLink="/home"><span class="fa fa-home"></span>Home</a>-->
     </li>
     <li class="nav-item">
       <button class="btn btn-warning" type="button" *ngIf="userService.currentUser.token && userService.currentUser.type !== 'ADMIN'"
