--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,7 +2,8 @@
   /*max-width: 600px;*/
   /*width: 300px;*/
   width: 20vw;
-  margin-right: 4vw;
+  margin-right: 2vw;
+  margin-left: 2vw;
   height: 90vh;
   /*margin-right: 10px;*/
 }
