--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -4,24 +4,24 @@
   <h1 class="title"><i class="fa fa-user"></i> Creare cont: </h1>
     <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
       <mat-form-field>
-        <input type="text" matInput placeholder="Nume Utilizator..." formControlName="username">
-        <mat-error *ngIf="!signupForm.get('username').valid && signupForm.get('username').touched">Introduceti un nume de utilizator!</mat-error>
+        <input type="text" matInput placeholder="Nume utilizator..." formControlName="username">
+        <mat-error *ngIf="!signupForm.get('username').valid && signupForm.get('username').touched">Introduceți un nume de utilizator!</mat-error>
       </mat-form-field>
       <mat-form-field>
         <input placeholder="E-mail..." type="email" matInput formControlName="email">
-        <mat-error *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched">Adresa de e-mail nu este valida!</mat-error>
+        <mat-error *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched">Adresa de e-mail nu este validă!</mat-error>
       </mat-form-field>
       <mat-form-field>
         <input placeholder="Parola..." matInput type="password" formControlName="password" (keyup)="keyPress($event)">
-        <mat-error *ngIf="!signupForm.get('password').valid && signupForm.get('password').touched">Introduceti o parola!</mat-error>
+        <mat-error *ngIf="!signupForm.get('password').valid && signupForm.get('password').touched">Introduceți o parola!</mat-error>
       </mat-form-field>
       <mat-form-field>
-        <input placeholder="Confirmare parola..." matInput type="password" formControlName="confirm_password">
-        <mat-error *ngIf="!signupForm.get('confirm_password').valid && signupForm.get('confirm_password').touched">Parola introdusa nu coincide!</mat-error>
+        <input placeholder="Confirmare parolă..." matInput type="password" formControlName="confirm_password">
+        <mat-error *ngIf="!signupForm.get('confirm_password').valid && signupForm.get('confirm_password').touched">Parola introdusă nu coincide!</mat-error>
       </mat-form-field>
       <mat-form-field>
         <input placeholder="Telefon..." matInput type="tel" formControlName="phone">
-        <mat-error *ngIf="!signupForm.get('phone').valid && signupForm.get('phone').touched">Introduceti un numar de telefon valid!</mat-error>
+        <mat-error *ngIf="!signupForm.get('phone').valid && signupForm.get('phone').touched">Introduceți un număr de telefon valid!</mat-error>
       </mat-form-field>
       <!--<mat-form-field>-->
         <!--<mat-select matInput formControlName="user_type">-->
