--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
   </button>
   <div class="collapse navbar-collapse" id="collapse_target">
   <!-- Brand -->
-  <a class="navbar-brand" href="#">Homefinder</a>
+  <a class="navbar-brand" href="/">Homefinder</a>
 
   <!-- Links -->
   <ul class="navbar-nav">
@@ -35,16 +35,16 @@
           <button class="btn btn-warning dropdown-toggle" data-toggle="dropdown">Contul meu</button>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a routerLink="/myAds" class="dropdown-item">
-              <button class="btn btn-success option" type="button">Anun&#539;urile Mele</button>
+              <button class="btn btn-success option" type="button">Anunțurile Mele</button>
             </a>
             <div class="dropdown-item">
-              <button class="btn btn-warning option" (click)="openEdit()">Editeaza date cont</button>
+              <button class="btn btn-warning option" (click)="openEdit()">Editează date cont</button>
             </div>
             <a routerLink="/favorites" class="dropdown-item">
               <button class="btn btn-danger option" type="button">Favorite</button>
             </a>
             <a routerLink="/calendar" class="dropdown-item">
-              <button class="btn btn-info option" type="button">Programari</button>
+              <button class="btn btn-info option" type="button">Programări</button>
             </a>
           </div>
         </li>
