--- a/src/app/my-ads/my-ads.component.html
+++ b/src/app/my-ads/my-ads.component.html
@@ -1,6 +1,6 @@
 <ng4-loading-spinner></ng4-loading-spinner>
 <div class="ads__title">
-  <h1>Anunturile Mele: </h1>
+  <h1>Anunțurile mele: </h1>
   <h1 *ngIf="userService.myAds.length === 0">Nu aveți anunțuri adăugate!</h1>
 </div>
 <div class="custom__container">
@@ -12,19 +12,19 @@
         <img src="../../assets/casa.jpg" *ngIf="ad.adItemType == 'Casa'" mat-card-avatar>
         <img src="../../assets/bloc.jpg" *ngIf="ad.adItemType == 'Apartament'" mat-card-avatar>
       </mat-card-header>
-      <mat-card-content>Pret: {{ ad.price }} <span class="fa fa-euro"></span></mat-card-content>
+      <mat-card-content>Preț: {{ ad.price }} <span class="fa fa-euro"></span></mat-card-content>
       <img mat-card-image height="300px"  [src]="ad.image">
       <mat-card-actions class="ad__buttons">
-        <button mat-raised-button mat-button color="primary" (click)="viewAdDetails(ad)">Editeaza Anunt</button>
-        <button mat-raised-button mat-button color="warn" (click)="deleteAd(ad)">Sterge Anuntul</button>
+        <button mat-raised-button mat-button color="primary" (click)="viewAdDetails(ad)">Editează anunț</button>
+        <button mat-raised-button mat-button color="warn" (click)="deleteAd(ad)">Șterge anunțul</button>
       </mat-card-actions>
     </mat-card><br>
   </div>
 </div>
 <div class="myPaginationContainer" *ngIf="userService.myAds.length > 0">
   <pagination-controls class="myPagination" (pageChange)="userService.page = $event"
-                       previousLabel="Inapoi"
-                       nextLabel="Inainte" maxSize="5">
+                       previousLabel="Înapoi"
+                       nextLabel="Înainte" maxSize="5">
   </pagination-controls>
 </div>
 
