--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,40 +2,40 @@
 <mat-sidenav #sidenav class="sidenav">
   <div class="options__container">
     <div class="sidenav__buttons">
-      <button mat-button mat-raised-button color="warn" (click)="sidenav.toggle()">Inchide</button>
-      <button mat-button mat-raised-button color="accent" (click)="resetFilters()">Reseteaza Filtre</button>
+      <button mat-button mat-raised-button color="warn" (click)="sidenav.toggle()">Închide</button>
+      <button mat-button mat-raised-button color="accent" (click)="resetFilters()">Resetează</button>
     </div>
   <div class="ad__number__option">
-  <h4>Anunturi pe pagina</h4>
+  <h4>Anunțuri pe pagină</h4>
     <mat-select [(value)]="userService.itemsOnPage" class="numar__anunturi">
       <mat-option *ngFor="let option of userService.itemsPerPageOptions" [value]="option">{{ option }}</mat-option>
     </mat-select>
   </div>
   <mat-radio-group [(ngModel)]="userService.adItemType" class="adItemType__options">
-    <mat-radio-button value="Casa">Casa</mat-radio-button>
+    <mat-radio-button value="Casa">Casă</mat-radio-button>
     <mat-radio-button value="Apartament">Apartament</mat-radio-button>
     <mat-radio-button value='Toate'>Toate</mat-radio-button>
   </mat-radio-group>
   <div class="form__options">
     <mat-form-field class="" appearance="outline">
-      <input type="number" matInput placeholder="Pret minim..." [(ngModel)]="userService.priceMin" autocomplete="off">
+      <input type="number" matInput placeholder="Preț minim..." [(ngModel)]="userService.priceMin" autocomplete="off">
       <mat-icon matSuffix>euro_symbol</mat-icon>
     </mat-form-field>
     <mat-form-field class="form__field__input" appearance="outline">
-      <input type="number" matInput placeholder="Pret maxim..." [(ngModel)]="userService.priceMax" autocomplete="off">
+      <input type="number" matInput placeholder="Preț maxim..." [(ngModel)]="userService.priceMax" autocomplete="off">
       <mat-icon matSuffix>euro_symbol</mat-icon>
     </mat-form-field>
   </div>
   <div class="checkbox__options">
-    <mat-checkbox [(ngModel)]="userService.saleCheckbox">Vanzare</mat-checkbox>
-    <mat-checkbox [(ngModel)]="userService.rentCheckbox">Inchiriere</mat-checkbox>
+    <mat-checkbox [(ngModel)]="userService.saleCheckbox">Vânzare</mat-checkbox>
+    <mat-checkbox [(ngModel)]="userService.rentCheckbox">Închiriere</mat-checkbox>
   </div>
   <div class="form__options">
     <mat-form-field>
-      <input type="number" placeholder="Suprafata Minima..." matInput [(ngModel)]="userService.surfaceMin" autocomplete="off">
+      <input type="number" placeholder="Suprafața minimă..." matInput [(ngModel)]="userService.surfaceMin" autocomplete="off">
     </mat-form-field>
     <mat-form-field>
-      <input type="number" placeholder="Suprafata Maxima..." matInput [(ngModel)]="userService.surfaceMax" autocomplete="off">
+      <input type="number" placeholder="Suprafața maximă..." matInput [(ngModel)]="userService.surfaceMax" autocomplete="off">
     </mat-form-field>
   </div>
   <div class="form__options">
@@ -48,17 +48,17 @@
   </div>
   <div class="form__options">
     <mat-form-field>
-      <input type="number" matInput placeholder="An constructie..." [(ngModel)]="userService.yearBuiltMin" autocomplete="off">
+      <input type="number" matInput placeholder="An construcție minim..." [(ngModel)]="userService.yearBuiltMin" autocomplete="off">
     </mat-form-field>
     <mat-form-field>
-      <input type="number" matInput placeholder="An constructie..." [(ngModel)]="userService.yearBuiltMax" autocomplete="off">
+      <input type="number" matInput placeholder="An construcție maxim..." [(ngModel)]="userService.yearBuiltMax" autocomplete="off">
     </mat-form-field>
   </div>
   <mat-form-field class="furnished">
-    <mat-select placeholder="Tip locuinta..." [(value)]="userService.furnished">
-      <mat-option value="Mobilata">Mobilata</mat-option>
-      <mat-option value="Mobilata Partial">Mobilata Partial</mat-option>
-      <mat-option value="Nemobilata">Nemobilata</mat-option>
+    <mat-select placeholder="Tip locuință..." [(value)]="userService.furnished">
+      <mat-option value="Mobilata">Mobilată</mat-option>
+      <mat-option value="Mobilata Partial">Mobilată parțial</mat-option>
+      <mat-option value="Nemobilata">Nemobilată</mat-option>
     </mat-select>
   </mat-form-field>
   <div *ngIf="userService.adItemType === 'Apartament'">
@@ -88,10 +88,10 @@
   <div *ngIf="userService.adItemType === 'Casa'">
     <div class="form__options">
       <mat-form-field>
-        <input type="number" placeholder="Suprafata utila minim..." matInput [(ngModel)]="userService.areaSurfaceMin" autocomplete="off">
+        <input type="number" placeholder="Suprafața utilă minim..." matInput [(ngModel)]="userService.areaSurfaceMin" autocomplete="off">
       </mat-form-field>
       <mat-form-field>
-        <input type="number" placeholder="Suprafata utila maxim..." matInput [(ngModel)]="userService.areaSurfaceMax" autocomplete="off">
+        <input type="number" placeholder="Suprafața utilă maxim..." matInput [(ngModel)]="userService.areaSurfaceMax" autocomplete="off">
       </mat-form-field>
     </div>
   </div>
