--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
     <mat-radio-button value='Toate'>Toate</mat-radio-button>
   </mat-radio-group>
   <div class="form__options">
-    <mat-form-field class="" appearance="outline">
+    <mat-form-field class="form__field__input" appearance="outline">
       <input type="number" matInput placeholder="Preț minim..." [(ngModel)]="userService.priceMin" autocomplete="off">
       <mat-icon matSuffix>euro_symbol</mat-icon>
     </mat-form-field>
