--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -81,3 +81,13 @@
   margin-right: 8vw;
 }
 
+@media only screen and (max-width: 600px) {
+
+  .card__class {
+    /*width: 300px;*/
+    /*margin-right: 10px;*/
+    width: 90%;
+    height: auto;
+    margin-left: 20px;
+  }
+}
