--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,18 +14,18 @@
         <!--<a class="nav-link" routerLink="/home"><span class="fa fa-home"></span>Home</a>-->
       </li>
       <li class="nav-item">
-        <button class="btn btn-warning" type="button" *ngIf="userService.currentUser.token && userService.currentUser.type !== 'ADMIN'"
+        <button class="btn btn-warning sign__up" type="button" *ngIf="userService.currentUser.token && userService.currentUser.type !== 'ADMIN'"
                 (click)="addNewAd()">Adaug&#259; Anun&#539;</button>
       </li>
       <li class="nav-item">
         <a routerLink="/userList">
-          <button class="btn btn-warning" type="button" *ngIf="userService.currentUser.token && userService.currentUser.type === 'ADMIN'"
+          <button class="btn btn-warning sign__up" type="button" *ngIf="userService.currentUser.token && userService.currentUser.type === 'ADMIN'"
                   >Utilizatori</button>
         </a>
       </li>
       <li class="nav-item">
         <a routerLink="/statistics">
-          <button class="btn btn-warning" type="button" *ngIf="userService.currentUser.token && userService.currentUser.type === 'ADMIN'"
+          <button class="btn btn-warning sign__up" type="button" *ngIf="userService.currentUser.token && userService.currentUser.type === 'ADMIN'"
                   >Date anunțuri</button>
         </a>
       </li>
@@ -33,19 +33,19 @@
     <ul class="navbar-nav ml-auto">
         <div class="user__options">
           <li class="nav-item dropdown" *ngIf="userService.currentUser.token && userService.currentUser.type != 'ADMIN'">
-            <button class="btn btn-warning dropdown-toggle" data-toggle="dropdown">Contul meu</button>
+            <button class="btn btn-warning dropdown-toggle sign__up" data-toggle="dropdown">Contul meu</button>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a routerLink="/myAds" class="dropdown-item">
-                <button class="btn btn-success option" type="button">Anunțurile Mele</button>
+                <button class="btn btn-success option sign__up" type="button">Anunțurile Mele</button>
               </a>
               <div class="dropdown-item">
-                <button class="btn btn-warning option" (click)="openEdit()">Editează date cont</button>
+                <button class="btn btn-warning option sign__up" (click)="openEdit()">Editează date cont</button>
               </div>
               <a routerLink="/favorites" class="dropdown-item">
-                <button class="btn btn-danger option" type="button">Favorite</button>
+                <button class="btn btn-danger option sign__up" type="button">Favorite</button>
               </a>
               <a routerLink="/calendar" class="dropdown-item">
-                <button class="btn btn-info option" type="button">Programări</button>
+                <button class="btn btn-info option sign__up" type="button">Programări</button>
               </a>
             </div>
           </li>
