--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,9 @@
         <mat-icon matSuffix class="search__icon">mode_search</mat-icon>
       </mat-form-field>
     </form>
-    <p><button mat-raised-button mat-button (click)="userService.sidenav.toggle()" class="filter__button">Filtreaz&#259; anun&#539;uri</button></p>
+    <div class="button__responsive">
+      <button mat-raised-button mat-button (click)="userService.sidenav.toggle()" class="filter__button">Filtreaz&#259; anun&#539;uri</button>
+    </div>
   </div>
   <hr class="options">
     <div class="custom__container">
