--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,7 @@
     <!-- Links -->
     <ul class="navbar-nav">
       <li class="nav-item">
-        <button class="btn btn-success home__button" type="button" (click)="redirectHome()">Home <mat-icon>home</mat-icon></button>
+        <button class="btn btn-success home__button" type="button" (click)="redirectHome()">Acasă <mat-icon>home</mat-icon></button>
         <!--<a class="nav-link" routerLink="/home"><span class="fa fa-home"></span>Home</a>-->
       </li>
       <li class="nav-item">
